# cbp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  cbp-0.1.0-pyhbf21a9e_0.conda  cbp.yaml  copier.yml  pixi.toml  pyproject.toml
.build-output/: cbp-0.1.0-pyhbf21a9e_0.conda
.old/: pyproject.toml
.old/cbp/: __main__.py  main.py
.old/cbp/utility/: __init__.py  decorators.py  virtualenv.py
.old/templates/cbp-gateway/: README.md
.old/templates/cbp-gateway/cbp_gateway/: main.py
.old/templates/pytaskserver/: Dockerfile  pyproject.toml
.scratch/: README.md  coroutines.py  non_linear_task_workers.py
_old/: pyproject.toml
_old/.scratch/: coroutines.py  non_linear_task_workers.py  test_gevent.py
_old/cbp/: main.py
_old/cbp/lang/python/types/: message.py  profile.py
_old/notes/: README-tasks.md  cbp.md
_old/tests/: component_test.py
cbp/: __main__.py  component.py  main.py
cbp/components/: README.md
cbp/components/python/: component.py
cbp/components/python/component-template/: cookiecutter.json
cbp/components/python/project-template/{{cookiecutter.project_name}}/: pyproject.toml
cbp/components/python/project-template/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: _compute_cpu.py  main.py
cbp/gateway/: __init__.py
cbp/gateway/{{cookiecutter.project_name}}/: pyproject.toml
cbp/lang/python/: component.py  component_engine.py
cbp/lang/python/components/: component.py
cbp/lang/python/docs.components/: README-components.md
cbp/lang/python/types/: __init__.py  component.py  meta.py  profile.py  socket.py  task.py
cbp/languages/python/components/: component.yaml
cbp/languages/python/types/: __init__.py  cbp.py  message.py  profile.py  socket.py  task.py
cbp/python/: generators.py
cbp/python/tasks/: generator.py
cbp/python/types/: cbp.py
cbp/tasks/: README.md  __init__.py
cbp/utility/: gateway.py  generators.py  my_decorators.py  poetry.py  procs.py  subprocess.py
cookiecutters/gateway/hooks/: pre_prompt.py
cookiecutters/gateway/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: main.py
cookiecutters/langserver/{{cookiecutter.langserver_name}}/: pyproject.toml
cookiecutters/process/{{cookiecutter.project_name}}/: pyproject.toml
docs/: contribute.md  copier.md  module-license-mplvs.txt
docs/typer_example/: main.py
docs/typer_example/users/: delete.py
extensions/: slugify.py
notebooks/: cbp.ipynb
notes/: README.md  cbp.md  graphql.md
scripts/: list-existing-git-subtrees.sh  list-git-subtrees.sh
src/cbp/: app.py
src/cbp-python/: README.md  pixi.toml  pyproject.toml
src/cbp-rust/: Cargo.toml  cbp-rust-0.1.0-hbf21a9e_0.conda  pixi.toml  rust_pkg-0.1.0-hbf21a9e_0.conda
src/cbp/users/: add.py
templates/cbp-gateway/: pyproject.toml
templates/cbp-gateway/cbp_gateway/: main.py
templates/components/base/: .gitattributes  .gitignore  copier.yaml  pixi.toml
templates/components/python/: README.md  copier.yaml  pixi.toml
templates/components/rust/: README.md
templates/pytaskserver/: Dockerfile  docker-compose.yaml  pyproject.toml
templates/pytaskserver/app/: main.py
tests/: component_test.py
(+17 files in other folders)
