[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_template"}]

[tool.poetry.scripts]
{(cookiecutter.project_name}} = "{{cookiecutter.project_slug}}.main:app"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
